post transactions test and comment functionality has been added